# arbiter

./: .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bind.sh  book.toml  common_contracts.toml  deny.toml  fork_config.toml  foundry.toml  generate_bindings.sh  out.html  structure.txt  test_config.toml  vulnerability_corpus.md
app/: Cargo.toml
app/src/: main.rs
app/src/cli/: cli.yml  mod.rs
app/src/plot/: mod.rs
app/src/simulation/: mod.rs
app/src/tokens/: mod.rs
app/src/uniswap/: mod.rs
app/src/utils/: mod.rs
app/utils/: mod.rs  tokens.rs
arbiter-core/: CHANGELOG.md  Cargo.toml  logs.json
arbiter-core/benches/: bench.rs
arbiter-core/contracts/: ArbiterMath.sol
arbiter-core/data/: output.json  output.parquet
arbiter-core/src/: agent.rs  console.rs  coprocessor.rs  data_collection.rs  database.rs  environment.rs  errors.rs  events.rs  inspector.rs  lib.rs  manager.rs  math.rs  middleware.rs  nonce_middleware.rs  tests.rs  utils.rs
arbiter-core/src/bindings/: arbiter_math.rs  arbiter_token.rs  block_info.rs  liquid_exchange.rs  mod.rs
arbiter-core/src/console/: abi.rs  mod.rs
arbiter-core/src/database/: fork.rs  inspector.rs  mod.rs
arbiter-core/src/environment/: builder.rs  cheatcodes.rs  error.rs  errors.rs  fork.rs  instruction.rs  mod.rs  tests.rs
arbiter-core/src/math/: mod.rs  stochastic_process.rs
arbiter-core/src/middleware/: cast.rs  connection.rs  connections.rs  errors.rs  events.rs  mod.rs  nonce_middleware.rs  transaction.rs  transactions.rs
arbiter-core/src/tests/: bindings.rs  clients.rs  contracts.rs  data_collection_integration.rs  data_output.rs  derives.rs  environment.rs  environment_control.rs  environment_integration.rs  interaction.rs  management.rs  middleware.rs  middleware_instructions.rs  middleware_integration.rs  mod.rs  output_test.json  signer.rs  strategies.rs
arbiter-core/tests/: common.rs  contracts.rs  data_collection_integration.rs  environment_integration.rs  events_integration.rs  fork.json  middleware_integration.rs  mod.rs
arbiter-derive/: CHANGELOG.md  Cargo.toml
arbiter-derive/src/: lib.rs
arbiter-engine/: CHANGELOG.md  Cargo.toml
arbiter-engine/src/: agent.rs  collector.rs  config.rs  errors.rs  examples.rs  lib.rs  machine.rs  messager.rs  transactor.rs  universe.rs  world.rs
arbiter-engine/src/examples/: mod.rs  timed_message.rs  token_minter.rs
arbiter-engine/src/examples/config/: agents_with_config.rs  mod.rs  test_config.toml  timed_message.rs
arbiter-engine/src/examples/minter/: config.toml  mod.rs  token_minter.rs
arbiter-engine/src/examples/timed_message/: config.toml  mod.rs
benches/: Cargo.toml
benches/src/: main.rs
bindings/: CHANGELOG.md  Cargo.toml  foundry.toml
bindings/contracts/: ArbiterMath.sol  Counter.sol
bindings/src/: erc1155.rs  i_uniswap_v3_pool.rs  i_uniswap_v3_pool_actions.rs  i_uniswap_v3_pool_derived_state.rs  i_uniswap_v3_pool_events.rs  i_uniswap_v3_pool_immutables.rs  i_uniswap_v3_pool_owner_actions.rs  i_uniswap_v3_pool_state.rs  ierc20.rs  ierc721_metadata.rs  ierc721_token_receiver.rs  lib.rs
bindings/src/bindings/: liquid_exchange.rs  mod.rs
bindings/src/solstat_bindings/: gaussian.rs  invariant.rs  units.rs
core/: CHANGELOG.md  Cargo.toml
core/benches/: bench.rs
core/src/: agent.rs  coprocessor.rs  environment.rs  errors.rs  lib.rs  manager.rs  middleware.rs  tests.rs  utils.rs
core/src/bindings/: mod.rs
core/src/console/: mod.rs
core/src/database/: inspector.rs  mod.rs
core/src/environment/: instruction.rs  mod.rs
core/src/math/: stochastic_process.rs
core/src/middleware/: connection.rs  mod.rs  nonce_middleware.rs
core/src/tests/: mod.rs
core/tests/: environment_integration.rs  middleware_integration.rs
crates/arbiter/: Cargo.toml
crates/arbiter/src/: main.rs
crates/arbiter/src/onchain/: backtest_data.rs  configuration.rs  live.rs  mod.rs
crates/arbiter/src/simulate/: configuration.rs  mod.rs
crates/arbiter/src/visualize/: mod.rs
crates/architect/: Cargo.toml
crates/architect/src/: lib.rs
crates/clairvoyance/: Cargo.toml
crates/clairvoyance/src/: clairerror.rs  config.toml  error.rs  lib.rs  main.rs  monitor.rs  simulation.rs  uniswap.rs  utils.rs
crates/clairvoyance/src/cli/: mod.rs
crates/clairvoyance/src/config/: mod.rs
crates/clairvoyance/src/tokens/: mod.rs
crates/cli/: Cargo.toml
crates/cli/config-test/: config.toml
crates/cli/src/: UniswapV3Factory.sol  backtest_data.rs  chain.rs  cli.yml  config.toml  gbm.rs  main.rs  main_copy.rs  main_mvp.rs  main_revm.rs  main_w_args.rs  ou.rs  sim.rs
crates/cli/src/commands/: backtest_data.rs  gbm.rs  live.rs  mod.rs  price_path.rs  sim.rs
crates/cli/src/config/: mod.rs
crates/cli/src/sim/: mod.rs  portfolio_sim.rs  uniswap_sim.rs
crates/on-chain/: Cargo.toml  README.md
crates/on-chain/src/: lib.rs
crates/on-chain/src/architect/: mod.rs
crates/on-chain/src/clairvoyance/: error.rs  mod.rs
crates/on-chain/src/clarivoyance/: error.rs  mod.rs
crates/on-chain/src/executor/: mod.rs
crates/on-chain/src/monitor/: mod.rs
crates/on-chain/src/objectives/: basket_liquidation.rs  linear_nonnegative.rs  mod.rs
crates/onchain/: Cargo.toml
crates/simulate/: Cargo.toml  README.md
crates/simulate/src/: agent.rs  contract.rs  environment.rs  environmentt.rs  exchange.rs  execution.rs  historic.rs  lib.rs  manager.rs  middleware.rs  price_simulation.rs  testbed.rs  utils.rs
crates/simulate/src/agent/: admin.rs  arbitrage.rs  arbitrageur.rs  journaler.rs  mod.rs  simple_arbitrageur.rs  user.rs
crates/simulate/src/bindings/: account_lib.rs  arbiter_math.rs  echidna_erc20.rs  i_uniswap_v2_pair.rs  (+3 more)
engine/: CHANGELOG.md  Cargo.toml
engine/src/: agent.rs  errors.rs  lib.rs  machine.rs  messager.rs  universe.rs  world.rs
engine/tests/: common.rs  machine_integration.rs  mock_simulation.rs  universe_integration.rs
lib/onchain/: Cargo.toml  README.md
lib/simulate/: Cargo.toml  README.md
lib/simulate/src/: lib.rs  manager.rs
macros/: CHANGELOG.md  Cargo.toml
macros/src/: lib.rs
(+614 files in other folders)
