[workspace]
# List of crates included in this workspace
members = [
    "arbiter-bindings",
    "arbiter-core",
    "arbiter-engine",
    "arbiter-macros",
    "documentation",
]

# List of crates excluded from this workspace
exclude = ["benches"]

# Package configuration
[package]
name = "arbiter"
version = "0.4.14"
edition = "2021"
authors = [
    "Waylon Jepsen <waylonjepsen1@gmail.com>",
    "Colin Roberts <colin@autoparallel.xyz>",
]
description = "Allowing smart contract developers to do simulation driven development via an EVM emulator"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]

# Binary configuration
[[bin]]
name = "arbiter"
path = "bin/main.rs"

[[example]]
name = "project"
path = "examples/project.rs"

[workspace.dependencies]
# Local
arbiter-bindings = { path = "arbiter-bindings" }
arbiter-core = { path = "arbiter-core" }
arbiter-engine = { path = "arbiter-engine" }
arbiter-macros = { path = "arbiter-macros" }

revm = { version = "5.0.0", features = ["ethersdb", "std", "serde"] }
revm-primitives = "=2.0.0"
ethers = { version = "2.0.13" }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.113" }
toml = "0.8.10"

tokio = { version = "1.36.0", features = ["macros", "full"] }
futures = "0.3.30"
futures-util = { version = "0.3.30" }
async-stream = "0.3.5"
async-trait = { version = "0.1.77" }
crossbeam-channel = { version = "0.5.11" }

syn = { version = "2.0.48", features = ["full"] }
proc-macro2 = { version = "1.0.78" }

tracing = "0.1.40"
thiserror = { version = "1.0.57" }

# Dependencies for the release build of Arbiter bin
[dependencies]
arbiter-core.workspace = true

# Command line and config
clap = { version = "4.5.0", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
config = { version = "=0.14.0" }
ethers.workspace = true
revm.workspace = true
toml.workspace = true
proc-macro2.workspace = true
syn.workspace = true
Inflector = { version = "=0.11.4" }

# Building files
foundry-config = { version = "=0.2.0" }
tempfile = { version = "3.10.0" }

# Errors
thiserror.workspace = true
# Dependencies for the test build and development
[dev-dependencies]
arbiter-bindings.workspace = true
arbiter-macros.workspace = true
revm-primitives.workspace = true
tokio.workspace = true
assert_cmd = { version = "=2.0.13" }
rayon = { version = "1.8.0" }


# Release profile
[profile.release]
# Link-Time Optimization can improve runtime at cost of build time
lto = true
# The Rust compiler splits your crate into multiple codegen units to parallelize (and thus speed up) compilation but at the cost of optimization. 
# This setting tells the compiler to use only one codegen unit, which will slow down compilation but improve optimization.
codegen-units = 1
