[workspace]
# List of crates included in this workspace
members = ["bindings", "core", "engine", "macros"]

# List of crates excluded from this workspace
exclude = ["benches", "docs"]

# Package configuration
[package]
name = "arbiter"
version = "0.4.19"
edition = "2021"
authors = [
    "Waylon Jepsen <waylonjepsen1@gmail.com>",
    "Colin Roberts <colin@autoparallel.xyz>",
]
description = "Allowing smart contract developers to do simulation driven development via an EVM emulator"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]

# Binary configuration
[[bin]]
name = "arbiter"
path = "bin/main.rs"

[[example]]
name = "template"
path = "examples/template/src/main.rs"

[[example]]
name = "minter"
path = "examples/minter/main.rs"


[workspace.dependencies]
# Arbiter local for development
arbiter-bindings = { path = "bindings" }
arbiter-core = { path = "core" }
arbiter-engine = { path = "engine" }
arbiter-macros = { path = "macros" }

# Arbiter crates.io for release, these need to be used to do crate releases!
# arbiter-bindings = "0.1.4"
# arbiter-core = "0.10.2"
# arbiter-engine = "0.3.0"
# arbiter-macros = "0.1.1"

# alloy = { git = "https://github.com/alloy-rs/alloy", branch = "main", features = [
#     "sol-types",
#     "json-abi",
# ] }
alloy-core = "0.6.4"
alloy-json-abi = "0.6.4"
alloy-sol-macro = { version = "0.6.4", features = ["json"] }
alloy-sol-types = "0.6.4"
alloy-providers = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
alloy-rpc-trace-types = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
revm = { version = "6.1.0", features = ["ethersdb", "std", "serde"] }
revm-primitives = "2.1.0"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
toml = "0.8.10"

tokio = { version = "1.36.0", features = ["macros", "full"] }
futures = "0.3.30"
futures-util = { version = "0.3.30" }
async-stream = "0.3.5"
async-trait = { version = "0.1.77" }
crossbeam-channel = { version = "0.5.12" }

syn = { version = "2.0.52", features = ["full"] }
proc-macro2 = { version = "1.0.78" }

tracing = "0.1.40"
thiserror = { version = "1.0.57" }
anyhow = "1.0.80"

# Dependencies for the release build of Arbiter bin
[dependencies]
arbiter-core.workspace = true

# Command line and config
clap = { version = "4.5.1", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
config = { version = "=0.14.0" }
ethers = "2.0.13"
revm.workspace = true
toml.workspace = true
proc-macro2.workspace = true
syn.workspace = true
Inflector = { version = "=0.11.4" }

# Building files
foundry-config = { version = "=0.2.0" }
tempfile = { version = "3.10.1" }

# Errors
thiserror.workspace = true
# Dependencies for the test build and development
[dev-dependencies]
arbiter-bindings.workspace = true
arbiter-engine.workspace = true
arbiter-macros.workspace = true
revm-primitives.workspace = true
serde.workspace = true
async-trait.workspace = true
anyhow.workspace = true
rayon = { version = "1.8.0" }

# Necessary for examples
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"
assert_cmd = { version = "=2.0.14" }


# Release profile
[profile.release]
# Link-Time Optimization can improve runtime at cost of build time
lto = true
# The Rust compiler splits your crate into multiple codegen units to parallelize (and thus speed up) compilation but at the cost of optimization. 
# This setting tells the compiler to use only one codegen unit, which will slow down compilation but improve optimization.
codegen-units = 1
