[package]
name = "arbiter-core"
version = "0.7.4"
edition = "2021"
authors = ["Waylon Jepsen <waylonjepsen1@gmail.com>", "Colin Roberts <colin@autoparallel.xyz>"]
description = "Allowing smart contract developers to do simulation driven development via an EVM emulator"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]
readme = "../README.md"

[features]
contracts = []

# Dependencies for the release build
[dependencies]

# Ethereum and EVM
ethers.workspace = true
revm.workspace = true
revm-primitives.workspace = true

# Serialization
bytes = { version = "=1.5.0" }
serde.workspace = true
serde_json.workspace = true

# Concurrency/async
# tokio = { version = "1.32.0", features = ["macros", "full"] }
tokio.workspace = true
async-trait =  { version = "0.1.74" }
crossbeam-channel =  { version = "=0.5.8" }
futures-timer = { version = "=3.0.2" }
futures-locks = { version = "=0.7.1" }

# Randomness
rand =  { version = "=0.8.5" }
rand_distr = { version = "=0.4.3" }
statrs = { version = "=0.16.0" }

# Errors
thiserror.workspace = true

# Logging
futures-util =  { version = "=0.3.29" }
tracing = "0.1.40"

# File types
csv = { version = "1.3.0" }
polars = { version = "0.34.2", features = ["parquet", "csv"] }

# Dependencies for the test build and development
[dev-dependencies]
arbiter-derive = { path = "../arbiter-derive" }
hex = { version = "=0.4.3", default-features = false }
anyhow =  { version = "=1.0.75" }
test-log =  { version = "=0.2.13" }
tracing-test = "0.2.4"

arbiter-core = { path = ".", features = ["contracts"] }
polars = "0.34.2"
cargo_metadata = "0.18.1"
chrono = "0.4.31"
futures =  { version = "=0.3.29" }

assert_matches =  { version = "=1.5" }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
