[package]
name = "arbiter-core"
version = "0.10.0"
edition = "2021"
authors = [
    "Waylon Jepsen <waylonjepsen1@gmail.com>",
    "Colin Roberts <colin@autoparallel.xyz>",
]
description = "Allowing smart contract developers to do simulation driven development via an EVM emulator"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]
readme = "../README.md"

# Dependencies for the release build
[dependencies]
arbiter-bindings = { path = "../arbiter-bindings" }

# Ethereum and EVM
uint = "0.9.5"
ethers.workspace = true
revm.workspace = true
revm-primitives.workspace = true
hashbrown = "0.14.3"

# Serialization
bytes = { version = "=1.5.0" }
serde.workspace = true
serde_json.workspace = true
hex = { version = "=0.4.3", default-features = false }

# Concurrency/async
tokio.workspace = true
async-trait.workspace = true
async-stream.workspace = true
crossbeam-channel.workspace = true
futures-timer = { version = "=3.0.2" }
futures-locks = { version = "=0.7.1" }


# Randomness
rand = { version = "=0.8.5" }
rand_distr = { version = "=0.4.3" }
statrs = { version = "=0.16.0" }

# Errors
thiserror.workspace = true

# Logging
futures-util.workspace = true
tracing.workspace = true

# File types
polars = { version = "0.36.2", features = ["parquet", "csv", "json"] }

# Dependencies for the test build and development
[dev-dependencies]
arbiter-bindings = { version = "0.1.2", path = "../arbiter-bindings" }
anyhow =  { version = "=1.0.79" }
test-log =  { version = "=0.2.14" }
tracing-test = "0.2.4"
tracing-subscriber = "0.3.18"

polars = "0.36.2"
cargo_metadata = "0.18.1"
chrono = "0.4.33"
futures = { version = "=0.3.30" }

assert_matches = { version = "=1.5" }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
