[package]
name = "arbiter-derive"
version = "0.1.0"
edition = "2021"
authors = ["Waylon Jepsen <waylonjepsen1@gmail.com>", "Colin Roberts <colin@autoparallel.xyz>"]
description = "proc-macro for arbiter"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "=2.0.37" }
quote = { version = "=1.0.33" }
proc-macro2 = { version = "=1.0.67" }
