[package]
name = "arbiter-engine"
version = "0.1.0"
edition = "2021"
authors = ["Waylon Jepsen <waylonjepsen1@gmail.com>", "Colin Roberts <colin@autoparallel.xyz>"]
description = "Allowing smart contract developers to do simulation driven development via an EVM emulator"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]
readme = "../README.md"

[dependencies]
ethers.workspace = true
arbiter-core.workspace = true
arbiter-bindings = { path = "../arbiter-bindings" }
artemis-core = { git = "https://github.com/paradigmxyz/artemis.git"}
crossbeam-channel.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio.workspace = true
