[package]
name = "arbiter-engine"
version = "0.1.0"
edition = "2021"
authors = ["Waylon Jepsen <waylonjepsen1@gmail.com>", "Colin Roberts <colin@autoparallel.xyz>"]
description = "Allowing smart contract developers to do simulation driven development via an EVM emulator"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]
readme = "../README.md"

[dependencies]
ethers.workspace = true
artemis-core = { git = "https://github.com/paradigmxyz/artemis.git" }
# artemis-core = { path = "../../../artemis/crates/artemis-core" }
futures-util.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
anyhow =  { version = "=1.0.76" }
tracing.workspace = true
async-stream = "0.3.5"
tokio-stream = "0.1.14"
async-broadcast = "0.6.0"
futures = "0.3.29"

[dev-dependencies]
arbiter-core.workspace = true
arbiter-bindings = { path = "../arbiter-bindings" }
tracing-subscriber = "0.3.18"
tracing-test = "0.2.4"
