[package]
name = "arbiter-engine"
version = "0.1.0"
edition = "2021"
authors = [
    "Waylon Jepsen <waylonjepsen1@gmail.com>",
    "Colin Roberts <colin@autoparallel.xyz>",
]
description = "Allowing smart contract developers to do simulation driven development via an EVM emulator"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]
readme = "../README.md"
documentation = "https://docs.rs/arbiter-engine"
homepage = "https://github.com/primitivefinance/arbiter"
repository = "https://github.com/primitivefinance/arbiter"

[dependencies]
arbiter-macros.workspace = true
ethers.workspace = true
futures-util.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
async-stream.workspace = true
anyhow = { version = "=1.0.79" }
tracing.workspace = true
tokio-stream = "0.1.14"
futures = "0.3.30"
crossbeam-channel.workspace = true
arbiter-core.workspace = true
arbiter-bindings.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
arbiter-core.workspace = true
arbiter-bindings.workspace = true
tracing-subscriber = "0.3.18"
tracing-test = "0.2.4"
