[package]
name = "arbiter-bindings"
version = "0.1.6"
edition = "2021"
description = "Rust bindings for common solidity smart contracts"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-core.workspace = true
alloy-json-abi.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
serde.workspace = true
