[package]
name = "arbiter-bindings"
version = "0.1.8"
edition = "2021"
description = "Rust bindings for common solidity smart contracts"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers.workspace = true
serde.workspace = true
