# Package configuration
[package]
name = "core"
version = "0.3.0"
edition = "2021"

# Dependency configuration
[dependencies]
# For execution
bytes = "1.4.0"
revm = "3.3.0"

# For handling events
crossbeam-channel = "0.5.8"

# For price simulation
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"

# For void middleware
async-trait = "0.1.68"

# For tests
hex = { version = "0.4.3", default-features = false }

# For Errors
anyhow = "1.0.71"
thiserror = "1.0.30"
# url = "2.2.2"

# Workspace dependencies
ethers = { git = "https://github.com/Autoparallel/ethers-rs.git" }
# ethers-middleware = { version = "2.0.4" }
serde = { version = "1.0.163", features= ["derive"]}
serde_json = { version = "1.0.96" }
tokio = { version = "1.28.1", features = ["macros", "full"] }
