[package]
name = "arbiter-core"
version = "0.11.0"
edition = "2021"
authors = [
    "Waylon Jepsen <waylonjepsen1@gmail.com>",
    "Colin Roberts <colin@autoparallel.xyz>",
]
description = "Allowing smart contract developers to do simulation driven development via an EVM emulator"
license = "Apache-2.0"
keywords = ["ethereum", "evm", "emulator", "testing", "smart-contracts"]
readme = "../README.md"

# Dependencies for the release build
[dependencies]
arbiter-bindings.workspace = true

# Ethereum and EVM
ethers.workspace = true
revm.workspace = true
revm-primitives.workspace = true


# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
bytes = { version = "^1.5.0" }
hex = { version = "^0.4.3", default-features = false }
hashbrown = "^0.14.5"
uint = "^0.9.5"

# Concurrency/async
tokio.workspace = true
futures-util.workspace = true
async-trait.workspace = true
async-stream.workspace = true
crossbeam-channel.workspace = true
futures-timer = { version = ">=3.0.2, <4.0.0" }
futures-locks = { version = "=0.7.1" }

# Randomness
rand = { version = "=0.8.5" }

# Errors
thiserror.workspace = true

# Logging
tracing.workspace = true

# File types
polars = { version = "0.38.3", features = ["parquet", "csv", "json"] }

# Dependencies for the test build and development
[dev-dependencies]
tracing-subscriber = "0.3.18"
futures.workspace = true

# For bench
cargo_metadata = "0.18.1"
chrono = "0.4.38"

assert_matches = { version = "=1.5" }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
