[package]
name = "clairvoyance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.145", features= ["derive"]}
tokio = { version = "1.17.0", features = ["macros"] }
bindings = { path = "../bindings" }
utils = { path = "../utils" }
toml = "0.5.10"
ethers = "1.0.0"
eyre = "0.6.6"
num-bigfloat = "1.6.0"
clap = {version = "~2.27.0", features = ["yaml"]}
yaml-rust = "0.4"
chrono = "0.4.23"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
plotly = "0.8.3"