[package]
name = "arbiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
clairvoyance = { path = "../clairvoyance" }
simulate = { path = "../simulate" }

# External
tokio = { version = "1.23", features = [
    # "rt-multi-thread",
    "macros",
    "full"
]}
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.152", features =["derive"] }
utils = { path = "../utils" }
thiserror = "1.0.38"
eyre = "0.6.6"
toml = "0.5.10"

# ethers
ethers = "1.0.0"
ethers-providers = "1.0.2"
ethers-core = "1.0.2"

# revm and related
revm = { version = "2.3.1", features = ["default"] }
revm_precompiles = "1.1.2"
bytes = "1.3.0"
anyhow = "1.0.68"
hex = { version = "0.4", default-features = false }
futures = "0.3.24"
ruint = "1.7.0"

# TEST
ethers-solc = "1.0.2"
bindings = {path = "../bindings"}
ethers-contract = "1.0.2"