[package]
name = "arbiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
simulate = { path = "../simulate" }
bindings = {path = "../bindings"}

# External
tokio = { version = "1.23", features = [
    "macros",
    "full"
]}
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.152", features =["derive"] }
# utils = { path = "../utils" }
thiserror = "1.0.38"
eyre = "0.6.6"
toml = "0.5.10"
ethers = "=2.0.0"

# revm and related
revm = "3.0.0"
bytes = "1.3.0"
hex = { version = "0.4", default-features = false }
ruint = "1.7.0"