[package]
name = "on-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal

bindings = { path = "../bindings" }

# External
serde = {version = "1.0.145", features= ["derive"]}
tokio = { version = "1.17.0", features = ["macros"] }
url = { version = "2.3.1", default-features = false }
toml = "0.7.3"
ethers = "2.0.3"
futures = "0.3"
eyre = "0.6.6"
serde_json = "1.0.68"
csv = "1.1"