[package]
name = "onchain"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal

bindings = { path = "../bindings" }

# External
serde = { version = "1.0.163", features= ["derive"]}
serde_json = { version = "1.0.96" }
tokio = { version = "1.28.2", features = ["macros"] }
url = { version = "2.3.1", default-features = false }
toml = "0.7.4"
ethers = { version = "2.0.4" }
futures = "0.3.28"
eyre = "0.6.8"
csv = { version = "1.2.1" }
