[package]
name = "onchain"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.3.1", default-features = false }
toml = "0.7.4"
eyre = "0.6.8"

# Workspace dependencies
futures.workspace = true
csv.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
bindings.workspace = true
tokio.workspace = true