# Package configuration
[package]
name = "simulate"
version = "0.2.0"
edition = "2021"

# Dependency configuration
[dependencies]
# For execution
bytes = "1.4.0"
revm = "3.3.0"

# For handling events
crossbeam-channel = "0.5.8"

# For price simulation
plotly = "0.8.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"

# For void middleware
async-trait = "0.1.68"

# For tests
hex = { version = "0.4.3", default-features = false }

# For Errors
anyhow = "1.0.71"
url = "2.2.2"

# Workspace dependencies
futures.workspace = true
csv.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
bindings.workspace = true
tokio.workspace = true
