[package]
name = "onchain"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal

bindings = { path = "../bindings" }

# External
serde = {workspace = "true", features= ["derive"]}
tokio = { workspace = "true", features = ["macros"] }
url = { version = "2.3.1", default-features = false }
toml = "0.7.4"
ethers = { workspace = "true" }
futures = "0.3.28"
eyre = "0.6.8"
serde_json = { workspace = "true" }
csv = {workspace = "true"}
