[package]
name = "simulate"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# execution
revm = "3.3.0"
bytes = "1.4.0"

# events
crossbeam-channel = "0.5.8"

# price_simulation
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
plotly = "0.8.3"
csv = "1.2.1"

# void_middleware
async-trait = "0.1.68"
serde = {version = "1.0.163", features= ["derive"]}
serde_json = "1.0.96"

# added for tests
bindings = { path = "../bindings" }
ethers = "2.0.4"
hex = { version = "0.4.3", default-features = false }
